# OCR

./: .gitignore  README.md  pyproject.toml
examples/pdfs/: extracted_text.json
ocr/: classes.py  config.py  core.py  main.py
tutorials/: easyocr.ipynb  tutorial.ipynb  tutorial_opencv.ipynb  tutorial_opencv.py
